<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/verde1">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_acai_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/vertical_margin_logo_1"
        android:src="@drawable/logo2"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/login_text_size_1"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/login_margin_text_start"
        android:layout_marginTop="@dimen/login_margin_text_top"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/login_margin_text_start"
        android:layout_marginEnd="@dimen/login_margin_text_start"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        android:layout_marginTop="@dimen/login_margin_edit_top"
        android:hint="@string/email_hint"
        android:textColorHint="@color/grey"
        android:paddingHorizontal="@dimen/login_padding"
        />

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textSize="@dimen/login_text_size_1"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/login_margin_text_start"
        android:layout_marginTop="@dimen/login_margin_text_top"
        />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/login_margin_text_start"
        android:layout_marginEnd="@dimen/login_margin_text_start"
        app:layout_constraintTop_toBottomOf="@id/tvPass"
        android:layout_marginTop="@dimen/login_margin_edit_top"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:paddingHorizontal="@dimen/login_padding"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEntrar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginStart="@dimen/login_margin_text_start"
        android:layout_marginEnd="@dimen/login_margin_text_start"
        android:layout_marginTop="@dimen/login_margin_text_start"
        app:layout_constraintTop_toBottomOf="@id/etPass"
        android:background="@color/cinza1"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
    />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        app:layout_constraintTop_toBottomOf="@id/btEntrar"
        android:layout_marginTop="@dimen/login_margin_text_start"
        android:layout_marginStart="@dimen/login_margin_google_start"
        android:layout_marginEnd="@dimen/login_margin_google_start"
        />

    <TextView
        android:id="@+id/tvCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criar_conta"
        android:textSize="@dimen/login_text_size_2"
        android:textColor="@color/azul1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvEsqueceuSenha"
        android:layout_marginBottom="@dimen/login_margin_link_top"
        />

    <TextView
        android:id="@+id/tvEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueceu_senha"
        android:textSize="@dimen/login_text_size_1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/azul1"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/login_margin_link_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>