<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Insira os seus dados de endereço:"
        android:textSize="@dimen/singup_text_size_1"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/login_margin_text_start"
        android:layout_marginTop="@dimen/signup_margin_text_top"
        />

    <TextView
        android:id="@+id/tvRua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rua"
        android:textSize="@dimen/singup_text_size_1"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/login_margin_text_start"
        />

    <EditText
        android:id="@+id/etRua"
        android:layout_width="240dp"
        android:layout_height="@dimen/login_edit_text_height"
        android:background="@drawable/edit_shape"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/login_margin_text_start"
        app:layout_constraintTop_toBottomOf="@id/tvRua"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/login_margin_edit_top"
        android:hint="@string/rua_hint"
        android:textColorHint="@color/grey"
        android:paddingHorizontal="@dimen/login_padding"
        />

    <TextView
        android:id="@+id/tvNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero"
        android:textSize="@dimen/singup_text_size_1"
        app:layout_constraintTop_toTopOf="@id/tvRua"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/login_margin_text_start"
        />

    <EditText
        android:id="@+id/etNumero"
        android:layout_width="64dp"
        android:layout_height="@dimen/login_edit_text_height"
        android:background="@drawable/edit_shape"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/etRua"
        app:layout_constraintStart_toStartOf="@id/tvNumero"
        android:inputType="textPassword"
        android:hint="@string/numero_hint"
        android:textColorHint="@color/grey"
        android:paddingHorizontal="@dimen/login_padding"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCarrinho"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        android:text="Adicionar Endereço"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>