<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCartItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/roxo1"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAcaiFoto"
                android:layout_width="128dp"
                android:layout_height="128dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/card3">

                <ImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/acai1"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/acai_completo"
                app:layout_constraintStart_toEndOf="@id/clAcaiFoto"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvTop1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/roxo1"
                android:text="@string/leite_condensado"
                app:layout_constraintStart_toEndOf="@id/clAcaiFoto"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/tvTop2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/roxo1"
                android:text="@string/pacoca"
                app:layout_constraintStart_toEndOf="@id/clAcaiFoto"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvTop1"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/tvTop3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/roxo1"
                android:text="@string/morango"
                app:layout_constraintStart_toEndOf="@id/clAcaiFoto"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvTop2"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/total18"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/delete"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>