<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTopBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/tvTop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:text="Cadastro"
                android:layout_marginStart="56dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_margin_text_start"
            android:layout_marginTop="@dimen/signup_margin_text_top"
            android:gravity="center"
            android:text="Insira os seus dados para o cadastro:"
            android:textColor="@color/black"
            android:textSize="@dimen/singup_text_size_1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clTopBar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivFoto"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="@dimen/signup_margin_text_top"
            android:src="@drawable/account_circle"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvPhotoError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_margin_text_start"
            android:gravity="center"
            android:text="Clique na imagem para escolher uma foto na galeria"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivFoto"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_margin_text_start"
            android:layout_marginTop="@dimen/login_margin_text_start"
            android:layout_marginEnd="@dimen/login_margin_text_start"
            android:includeFontPadding="false"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/ivFoto">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:hintTextColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_margin_text_start"
            android:layout_marginTop="@dimen/login_margin_edit_top"
            android:layout_marginEnd="@dimen/login_margin_text_start"
            android:includeFontPadding="false"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:errorTextColor="@color/red"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:hintTextColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_margin_text_start"
            android:layout_marginTop="@dimen/login_margin_edit_top"
            android:layout_marginEnd="@dimen/login_margin_text_start"
            android:includeFontPadding="false"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tilPass">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:hintTextColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCpf"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_margin_text_start"
            android:layout_marginTop="@dimen/login_margin_edit_top"
            android:layout_marginEnd="@dimen/login_margin_text_start"
            android:includeFontPadding="false"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf"
                android:inputType="number"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:hintTextColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_margin_text_start"
            android:layout_marginTop="@dimen/login_margin_edit_top"
            android:layout_marginEnd="@dimen/login_margin_text_start"
            android:includeFontPadding="false"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tilCpf">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:hintTextColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/black"
            android:text="Adicionar Endereço"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPhone"
            android:layout_marginBottom="32dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>